--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Simple Website</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <header>
         <h1>Welcome to My Simple Website</h1>
@@ -23,5 +25,14 @@
         <p>&copy; 2024 My Simple Website. All rights reserved.</p>
     </footer>
 </body>
-</html>
+<!-- Import the component -->
+<script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.4.0/model-viewer.min.js"></script>
 
+<!-- Use it like any other HTML element -->
+<model-viewer
+    alt="batmobile.glb"
+    src="shared-assets/models/NeilArmstrong.glb" ar environment-image="shared-assets/environments/moon_1k.hdr"
+    poster="shared-assets/models/NeilArmstrong.webp" shadow-intensity="1" camera-controls
+    touch-action="pan-y"></model-viewer>
+
+</html>
