--- a/index.html
+++ b/index.html
@@ -25,12 +25,10 @@
         <p>&copy; 2024 My Simple Website. All rights reserved.</p>
     </footer>
 </body>
-<script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.4.0/model-viewer.min.js"></script>
-
-<model-viewer
-    alt="batmobile.glb"
-    src="shared-assets/models/NeilArmstrong.glb" ar environment-image="shared-assets/environments/moon_1k.hdr"
-    poster="shared-assets/models/NeilArmstrong.webp" shadow-intensity="1" camera-controls
-    touch-action="pan-y"></model-viewer>
+<model-viewer src="batmobile.glb" alt="A 3D Model" ar-modes="webxr scene-viewer quick-look
+environment-image="neutral" auto-rotate camera-controls></model-viewers
+    
+    <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.4.0/model-viewer.min.js"></script>
+</body>
 
 </html>
