--- a/index.html
+++ b/index.html
@@ -25,8 +25,17 @@
         <p>&copy; 2024 My Simple Website. All rights reserved.</p>
     </footer>
 </body>
-<model-viewer src="batmobile.glb" alt="A 3D Model" ar-modes="webxr scene-viewer quick-look
-environment-image="neutral" auto-rotate camera-controls></model-viewers
+<model-viewer src="batmobile.glb" ar ar-modes="webxr scene-viewer quick-look" camera-controls tone-mapping="commerce" poster="poster.webp" shadow-intensity="1">
+    <div class="progress-bar hide" slot="progress-bar">
+        <div class="update-bar"></div>
+    </div>
+    <button slot="ar-button" id="ar-button">
+        View in your space
+    </button>
+    <div id="ar-prompt">
+        <img src="https://modelviewer.dev/shared-assets/icons/hand.png">
+    </div>
+</model-viewer>
     
     <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.4.0/model-viewer.min.js"></script>
 </body>
